--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.btn-center {
+    @apply flex items-center text-center;
+  }
+
+.input_form {
+    @apply pl-2 text-black;
+  }
